--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,20 @@ services:
     networks:
       - regtest-stack
 
+  p4-merchant:
+    container_name: p4-merchant
+    image: local.p4
+    environment:
+      LOG_LEVEL: "debug"
+      PAYD_HOST: "payd-merchant"
+      PAYD_PORT: ":28443"
+      SERVER_HOST: "p4"
+      SERVER_PORT: ":28445"
+    ports:
+      - "28445:28445"
+    networks:
+      - regtest-stack
+
 networks:
   regtest-stack:
     external: true
