swap golint for revive.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -197,9 +197,6 @@ linters-settings:
     # put imports beginning with prefix after 3rd-party packages;
     # it's a comma-separated list of prefixes
     local-prefixes: github.com/org/project
-  golint:
-    # minimal confidence for issues, default is 0.8
-    min-confidence: 1.0
   gomnd:
     settings:
       mnd:
@@ -334,7 +331,6 @@ linters:
     - govet
     - gosec
     - bodyclose
-    - golint
     - unconvert
     - dupl
     - misspell
@@ -348,6 +344,7 @@ linters:
     - goconst
     - gochecknoglobals
     - godot
+    - revive
     #- lll
   disable:
     - gocritic # use this for very opinionated linting
