--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,14 +41,21 @@ jobs:
         run: make run-unit-tests
       - name: Build
         run: go build -v ./...
-      - name: Generate Swagger
-        if: startsWith(github.ref, 'refs/tags/')
-        run: make generate-swagger
   release:
     needs: [golangci,build]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
       - name: release
         uses: goreleaser/goreleaser-action@v2
         if: startsWith(github.ref, 'refs/tags/')
