addressing pr feedback. Removing different binaries in place of configuration based setup for a single server binary

--- a/Dockerfile.releaser
+++ b/Dockerfile.releaser
@@ -14,7 +14,7 @@ RUN adduser \
 
 FROM bitnami/minideb:buster
 
-ADD rest-server /bin
+ADD server /bin
 COPY --from=builder /etc/passwd /etc/passwd
 COPY --from=builder /etc/group /etc/group
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
@@ -22,4 +22,4 @@ USER appuser:appuser
 
 EXPOSE 8445
 
-CMD ["rest-server"]
+CMD ["server"]
