--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,14 +1,14 @@
 # This is an example .goreleaser.yml file with some sane defaults.
 # Make sure to check the documentation at http://goreleaser.com
-project_name: rest-server
+project_name: server
 before:
   hooks:
     # You may remove this if you don't use go modules.
   #- go mod download
 builds:
   -
-    id: rest-server
-    main: ./cmd/rest-server
+    id: server
+    main: ./cmd/server
     env:
       - CGO_ENABLED=0
     goos:
@@ -38,7 +38,7 @@ changelog:
 dockers:
   -
     ids:
-      - rest-server
+      - server
     build_flag_templates:
       - "--pull"
       - "--label=org.opencontainers.image.created={{.Date}}"
