--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -3,9 +3,13 @@ version: "3.7"
 services:
   p4:
     container_name: p4
-    image: local.p4-socket
+    image: local.p4
+    environment:
+      SOCKET_CHANNEL_TIMEOUTSECONDS: 120
 
   p4-merchant:
     container_name: p4-merchant
-    image: local.p4-socket
+    image: local.p4
+    environment:
+      SOCKET_CHANNEL_TIMEOUTSECONDS: 120
 
