added hybrid http=>socket support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     image: local.p4
     environment:
       LOG_LEVEL: "info"
+      TRANSPORT_MODE: 'http'
     ports:
       - "8445:8445"
     networks:
@@ -18,6 +19,7 @@ services:
       LOG_LEVEL: "info"
       PAYD_HOST: "payd-merchant"
       PAYD_PORT: ":28443"
+      TRANSPORT_MODE: 'http'
       SERVER_HOST: "p4"
       SERVER_PORT: ":28445"
     ports:
